2004-05-26  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* src/rbgtkentry.c: Fix compilation error of Gtk::Entry.c 

2004-05-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkstock.c: Fix compilation error of GTK_STOCK_HARDDISK/NETWORK.
	Reported by John Platte.
	* src/rbgtkmessagedialog.c: Added Gtk::MessageDialog#set_markup for 2.4. 
	* src/rbgtkbutton.c: Added Gtk::Button#set_alignment, #alignment for 2.4.
	* src/rbgtkborder.c: Added.
	* sample/misc/entry.rb, settings.rb: Modified.
	* sample/misc/entrycompletion.rb: Added.
	* src/rbgtkentrycompletion.c: Added.
	* src/rbgtkentry.c: Added Gtk::Entry#set_completion, #completion. 

2004-05-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkclipboard.c: Added Gtk::Clipboard#request_targets, 
	#wait_for_targets for 2.4.
	* src/rbgtkdrag.c: Add Gtk::Drag.source_(set|get)_target_list for 2.4.

2004-05-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkfilechooser.c: Add Gtk::FileChooserNotExistentError, 
	Gtk::FileChooserBadFileNameError for error handling.
	* src/rbgtkiconinfo.c: Added. 
	* src/rbgtkicontheme.c: Added. 

2004-05-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c: Gtk::Dialog#run accept a block.
	Suggested by Dario Linsky.
	sample/misc/dialog2.rb: Follow above changes.

2004-05-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkrc.c: Add Gtk::RC.reset_styles for 2.4. 
	* src/rbgtkstock.c: Add missing constants and support 2.4. 
	* src/rbgtkaccelmap.c: Define as a class since 2.4 otherwise as a module.
	Add Gtk::AccelMap.get, .lock_path, .unlock_path.
	* src/rbgtkaccelkey.c: Add Gtk::AccelKey#set_key, #set_mods, #set_flags.

2004-05-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmain.c: Add Gtk.set_locale, Gtk.disable_setlocale. 
	* sample/misc/filechooser.rb: Added (Original code from Seiya Nishizawa).
	* src/rbgtk.h, gtk2.def: Add rbgtk_dialog_add_buttons_internal 
	as an external function.
	* src/rbgtkdialog.c: ditto.